--- a/resume.html
+++ b/resume.html
@@ -11,15 +11,16 @@
   	</head>
   	<body>
 
-<img src="babysloth.jpg" alt="Baby sloth hanging out in his home.">
+<img src="babysloth.jpg" alt="Sloth Sloane on the weekend.">
 <p>
-<strong>Sloth L. Sloane</strong><br>
+<h1>Sloth L. Sloane</h1>
+<strong>Contact</strong><br>
 • Email: slothlsloan22@gmail.com <br>
 • Phone: 123-456-7890 <br>
 • <a href="https://www.linkedin.com/in/cassidy-nissen-98465b273"> Manager's LinkedIn</a><br>
 </p>
 
-<h1>Objective</h1>
+<h2>Objective</h2>
 <p>Enthusiastic and detail-oriented sloth with a unique perspective on slow and deliberate marketing strategies. Seeking a marketing position where I can leverage my strengths in thoughtful analysis, strategic planning, and creative problem-solving to contribute to a dynamic team.
 </p>
 
